# HornCAD

./: .gitignore  AGENTS.md  Makefile  ROADMAP.md  horncad_context.md  pyproject.toml
docs/: DESIGN_REVIEW.md  GLOSSARY.md  ROADMAP.md  SETUP.md  design_flow.md  dreams.md  horncad_context.md
examples/811b/: 811b.yaml
examples/811b/output/: 811b_report.md
examples/rectangular_project/: rectangular_project.yaml
examples/rectangular_project_morph4/: rectangular_project_morph4.yaml
examples/test_project/: test_project.yaml
horncad/: __init__.py  __main__.py  benchmark.py  config.py  design_review.py  profile.py  refine.py  sampling.py  surface.py
tests/: helpers.py  test_benchmark.py  test_config.py  test_design_review.py  test_refine.py  test_surface.py
tools/: Center Profile Surface Explorer - inverted bow.html  Center Profile Surface Explorer - working.html  dual_surface_explorer.html  osse_family_widget.html  spline_termination_widget.html
