[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "horncad"
version = "0.0.0"
description = "Configuration and geometry tools for OS-SE waveguide generation."
requires-python = ">=3.13,<3.14"
dependencies = [
    "matplotlib>=3.10",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
